--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,7 +33,8 @@ jar.compress=false
 javac.classpath=\
     ${libs.libreria.classpath}:\
     ${file.reference.xqjapi-1.0-fr.jar}:\
-    ${libs.exist-1.classpath}
+    ${libs.exist-1.classpath}:\
+    ${libs.exist-1-2.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
