--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -59,7 +59,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=exercici.pkg1.m6.uf3.Exercici1M6UF3
+main.class=exercici_1_2.NewMain
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
